--- a/config.toml
+++ b/config.toml
@@ -1,25 +1,45 @@
 baseurl = "https://tz70s.github.io"
-title = "tz70s"
-theme = "vec"
-languageCode = "zh-tw"
-paginate = 10
+DefaultContentLanguage = "en"
+title = "I"
+theme = "beautifulhugo"
+metaDataFormat = "yaml"
+pygmentsUseClasses = true
+pygmentCodeFences = true
 
-[menu]
-  # Shown in the side menu.
-  [[menu.main]]
-    name = "post"
-    weight = 0
-    url = "/post"
-  [[menu.main]]
-    name = "about/me"
+[Params]
+  subtitle = "Learn Rust recently"
+  logo = "img/avatar.jpg"
+  favicon = "img/favicon.ico"
+  dateFormat = "January 2, 2006"
+  commit = false
+  comments = true
+
+#[[Params.bigimg]]
+#  src = "img/triangle.jpg"
+#  desc = "Triangle"
+#[[Params.bigimg]]
+#  src = "img/sphere.jpg"
+#  desc = "Sphere"
+#[[Params.bigimg]]
+#  src = "img/hexagon.jpg"
+#  desc = "Hexagon"
+
+[Author]
+  name = "tz70s"
+  email = "su3g4284zo6y7@gmail.com"
+  github = "tz70s"
+  twitter = "tz70s"
+  linkedin = "tz70s"
+  instagram = "tzch1ao"
+  soundcloud = "TzuChiaoYeh"
+
+[[menu.main]]
+    name = "Blog"
+    url = ""
     weight = 1
-    url = "/about"
 
-[params]
-  Keywords = ""
-  Description = "Interested in Operating System recently"
-  Avatar = "img/avatar.jpg"
-  SelfIntro = "I don't need no TV screen..."
-  Email = "su3g4284zo6y7@gmail.com"
-  GithubID = "tz70s"
-  TwitterID = "tz70s"
+[[menu.main]]
+    name = "About"
+    url = "about"
+    weight = 3
+
