--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ theme = "coder"
 paginate = 20 # Default number of pages per page in pagination.
 canonifyurls = true # Enable to turn relative URLs into absolute.
 
-pygmentsstyle = "b2" # Color-theme or style for syntax highlighting.
+pygmentsstyle = "pastie" # Color-theme or style for syntax highlighting.
 pygmentscodefences = true # Enable code fence background highlighting.
 pygmentscodefencesguesssyntax = true # Enable syntax guessing for code fences without specified language.
 
