--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://tz70s.github.io"
 languageCode = "en-us"
-title = "home-stay punk forever"
+title = ""
 theme = "coder"
 
 paginate = 20 # Default number of pages per page in pagination.
