--- a/config.toml
+++ b/config.toml
@@ -1,57 +1,13 @@
 baseURL = "https://tz70s.github.io"
 languageCode = "en-us"
 title = "tz70s"
-theme = "coder"
-
-paginate = 20 # Default number of pages per page in pagination.
-canonifyurls = true # Enable to turn relative URLs into absolute.
-
-pygmentsstyle = "autumn" # Color-theme or style for syntax highlighting.
-pygmentscodefences = true # Enable code fence background highlighting.
-pygmentscodefencesguesssyntax = true # Enable syntax guessing for code fences without specified language.
+theme = "hugo-theme-slim"
 
 [params]
-  author = "Tzu-Chiao Yeh" # Author's name.
-  info = "Taiwan, Taipei" # Author's job title or info.
-  description = "" # Site description.
-  keywords = "blog,developer,personal" # Site keywords.
-  avatarurl = "images/profile.jpg" # Contain the path of the optionnal avatar in the static folder.
-
-  footercontent = "" # Add footer content
-
-  # Whether you want to hide copyright and credits in the footer.
-  hideCredits = true
-  hideCopyright = true
-
-  # Custom CSS
-  custom_css = []
-
-  # RTL support
-  rtl = false
-
-  # Multilanguage mode
-  langseparator = "|"
-
-# Social links
-[[params.social]]
-    name = "Github"
-    weight = 1
-    url = "https://github.com/tz70s/"
-[[params.social]]
-    name = "Twitter"
-    weight = 2
-    url = "https://twitter.com/tz70s/"
-[[params.social]]
-    name = "LinkedIn"
-    weight = 3
-    url = "https://www.linkedin.com/in/tzu-chiao-yeh-193697103/"
-
-# Menu links
-[[menu.main]]
-    name = "Blog"
-    weight = 1
-    url  = "/posts/"
-[[menu.main]]
-    name = "About"
-    weight = 2
-    url = "/about/"
+  Subtitle = "I'm learning distributed computation and programming models."
+  GithubID = "tz70s"
+  TwitterID = "tz70s"
+  DisqusShortname = "Tzu-Chiao Yeh"
+  Summary = true
+  Content = false
+  FooterMsg = "me :: $ Tzu-Chiao Yeh @tz70s -> su3g4284zo6y7@gmail.com"
