--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
-baseURL = "https://tz70s.github.io"
-languageCode = "en-us"
+baseurl = "https://tz70s.github.io"
 title = "tz70s"
 theme = "hugo-theme-slim"
 
