--- a/config.toml
+++ b/config.toml
@@ -9,4 +9,4 @@ theme = "hugo-theme-slim"
   DisqusShortname = "Tzu-Chiao Yeh"
   Summary = true
   Content = false
-  FooterMsg = "me :: $ Tzu-Chiao Yeh @tz70s -> su3g4284zo6y7@gmail.com"
+  FooterMsg = "me :: Tzu-Chiao Yeh @tz70s => su3g4284zo6y7@gmail.com"
