--- a/config.toml
+++ b/config.toml
@@ -10,3 +10,5 @@ theme = "hugo-theme-slim"
   Summary = true
   Content = false
   FooterMsg = "me :: Tzu-Chiao Yeh @tz70s => su3g4284zo6y7@gmail.com"
+  syntaxHighlighter = "highlight.js"
+  customCSS = ["https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/solarized-light.min.css"]
