--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "public"]
-	path = public
+[submodule "tz70s.github.io"]
+	path = tz70s.github.io
 	url = https://github.com/tz70s/tz70s.github.io.git
