--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ theme = "hugo-theme-slim"
   GithubID = "tz70s"
   TwitterID = "tz70s"
   LinkedInID = "tzu-chiao-yeh-193697103"
+  ResumeLink = "https://drive.google.com/open?id=1wm9KAGz5H3ljCvuG9IX0LK0poWGZvnPr"
   DisqusShortname = "Tzu-Chiao Yeh"
   Summary = true
   Content = false
